AWT-124 Add fix for visible mobile filter-trigger in disabled-state

--- a/src/scss/_filterbar.scss
+++ b/src/scss/_filterbar.scss
@@ -513,19 +513,34 @@ _:-ms-fullscreen,
 
 /* Filterbar: disabled */
 
-.filterbar--disabled .filterbar__secondary {
-  pointer-events: none;
-}
-.filterbar--disabled .filterbar__item,
-.filterbar--disabled .btn {
-  opacity: .3;
-  pointer-events: none;
-}
-.filterbar--disabled .swiper-button-prev,
-.filterbar--disabled .swiper-button-next {
-  border-color: #f5f4f2;
-  &:before {
-    color: #e6e6e6;
+.filterbar--disabled {
+  .filterbar__secondary,
+  .filterbar__item,
+  .btn {
+    pointer-events: none;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    border-color: #f5f4f2;
+    &:before {
+      color: #e6e6e6;
+    }
+  }
+  .filterbar__view_options {
+    z-index: 99;
+  }
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background: $white;
+    opacity: 0.8;
+    z-index: 9;
   }
 }
 
